--- a/src/FlatMate.Migration.DotNet/FlatMate.Migration.DotNet.csproj
+++ b/src/FlatMate.Migration.DotNet/FlatMate.Migration.DotNet.csproj
@@ -10,11 +10,13 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="prayzzz.Common" Version="1.0.0-ci-39" />
   </ItemGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\src\FlatMate.Migration\FlatMate.Migration.csproj" />
+    <ProjectReference Include="..\..\src\FlatMate.Migration\FlatMate.Migration.csproj" />
   </ItemGroup>
 
 </Project>
