--- a/version.props
+++ b/version.props
@@ -1,6 +1,7 @@
 <Project>
   <PropertyGroup>
-    <VersionPrefix>2.0.0</VersionPrefix>
-    <VersionSuffix></VersionSuffix>
+    <VersionPrefix>2017.05.06.1405</VersionPrefix>
+    <VersionSuffix>
+    </VersionSuffix>
   </PropertyGroup>
 </Project>
