--- a/src/FlatMate.Web/wwwroot/tsconfig.json
+++ b/src/FlatMate.Web/wwwroot/tsconfig.json
@@ -7,6 +7,8 @@
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "skipLibCheck": true,
+    "sourceMap": false,
+    "strict": true,
     "strictNullChecks": true,
     "target": "ES5"
   }
