--- a/src/FlatMate.Migration.DotNet/Properties/launchSettings.json
+++ b/src/FlatMate.Migration.DotNet/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "FlatMate.Migration.DotNet": {
       "commandName": "Project",
-      "commandLineArgs": "create --migrations \".\" --schema \"Infrastructure\""
+      "commandLineArgs": "create"
     }
   }
 }
