--- a/src/FlatMate.Web/wwwroot/package.json
+++ b/src/FlatMate.Web/wwwroot/package.json
@@ -5,22 +5,24 @@
   "repository": {},
   "license": "MIT",
   "dependencies": {
-    "atomicjs": "~2.1.0",
-    "es6-promise": "~4.1.0",
-    "knockout": "~3.4.2",
-    "knockout-dragdrop": "~2.5.1"
+    "atomicjs": "2.1.0",
+    "es6-promise": "4.1.1",
+    "knockout": "3.4.2",
+    "knockout-dragdrop": "2.5.1"
   },
   "devDependencies": {
-    "@types/knockout": "~3.4.40",
-    "css-loader": "~0.28.4",
-    "extract-text-webpack-plugin": "~2.1.2",
-    "node-sass": "~4.5.3",
-    "sass-loader": "~6.0.6",
-    "style-loader": "~0.18.2",
-    "ts-loader": "~2.2.0",
-    "tslint": "~5.4.3",
-    "typescript": "~2.3.4",
-    "webpack": "~3.0.0"
+    "@types/knockout": "3.4.40",
+    "css-loader": "0.28.4",
+    "extract-text-webpack-plugin": "2.1.2",
+    "node-sass": "4.5.3",
+    "file-loader": "0.11.2",
+    "sass-loader": "6.0.6",
+    "style-loader": "0.18.2",
+    "ts-loader": "2.2.1",
+    "url-loader": "0.5.9",
+    "tslint": "5.4.3",
+    "typescript": "2.4.1",
+    "webpack": "3.0.0"
   },
   "scripts": {
     "build": "./node_modules/.bin/webpack",
