--- a/src/FlatMate.Web/FlatMate.Web.csproj
+++ b/src/FlatMate.Web/FlatMate.Web.csproj
@@ -1,18 +1,15 @@
 ﻿<Project ToolsVersion="15.0" Sdk="Microsoft.NET.Sdk.Web">
-  
   <Import Project="..\..\build\common.props" />
-  
+  <Import Project="..\..\version.props" />
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <RuntimeIdentifiers>win-x64,linux-x64</RuntimeIdentifiers>
     <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
   </PropertyGroup>
-  
   <ItemGroup>
     <Content Update="wwwroot/node_modules/**" CopyToPublishDirectory="Never" />
     <Content Include="_Migrations/**" CopyToPublishDirectory="Always" />
   </ItemGroup>
-  
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.0" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.0.0" />
@@ -31,7 +28,6 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="1.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUi" Version="1.0.0" />
   </ItemGroup>
-  
   <ItemGroup>
     <ProjectReference Include="..\FlatMate.Api\FlatMate.Api.csproj" />
     <ProjectReference Include="..\FlatMate.Migration\FlatMate.Migration.csproj" />
@@ -39,7 +35,9 @@
     <ProjectReference Include="..\FlatMate.Module.Common\FlatMate.Module.Common.csproj" />
     <ProjectReference Include="..\FlatMate.Module.Lists\FlatMate.Module.Lists.csproj" />
   </ItemGroup>
-  
+  <Target Name="PrintVersion" BeforeTargets="BeforeBuild">
+    <Message Text="Building $(AssemblyName) version $(Version)" Importance="High" />
+  </Target>
   <Target Name="BuildFrontend" AfterTargets="AfterBuild" Condition="'$(Configuration)' == 'Release'">
     <ItemGroup>
       <FrontendFiles Include="./wwwroot/dist/*" />
@@ -48,12 +46,10 @@
     <Exec Command="yarn --force" WorkingDirectory="wwwroot" />
     <Exec Command="./node_modules/.bin/webpack --env=$(Configuration)" WorkingDirectory="wwwroot" />
   </Target>
-  
   <Target Name="PublishFrontend" AfterTargets="PrepareForPublish" DependsOnTargets="BuildFrontend">
     <ItemGroup>
       <DistFolder Include="wwwroot/dist/**/*" />
     </ItemGroup>
     <Copy SourceFiles="@(DistFolder)" DestinationFolder="$(PublishDir)\wwwroot\dist\%(RecursiveDir)" />
   </Target>
-  
 </Project>
