--- a/version.props
+++ b/version.props
@@ -1,7 +1,5 @@
 <Project>
   <PropertyGroup>
-    <VersionPrefix>2017.07.01.1372</VersionPrefix>
-    <VersionSuffix>
-    </VersionSuffix>
+    <Version>2017.07.01.1372</Version>
   </PropertyGroup>
 </Project>
