--- a/src/FlatMate.Web/wwwroot/package.json
+++ b/src/FlatMate.Web/wwwroot/package.json
@@ -9,27 +9,27 @@
     "atomicjs": "3.2.1",
     "blazy": "1.8.2",
     "dateformat": "3.0.3",
-    "es6-promise": "4.2.4",
-    "glob": "7.1.2",
+    "es6-promise": "4.2.5",
+    "glob": "7.1.3",
     "knockout": "3.4.2",
-    "mini-css-extract-plugin": "^0.4.0"
+    "mini-css-extract-plugin": "0.4.4"
   },
   "devDependencies": {
-    "@types/blazy": "1.5.30",
+    "@types/blazy": "1.5.31",
     "@types/dateformat": "1.0.1",
-    "@types/knockout": "3.4.57",
-    "css-loader": "0.28.11",
-    "file-loader": "1.1.11",
-    "node-sass": "4.9.0",
-    "sass-loader": "7.0.3",
-    "style-loader": "0.21.0",
-    "ts-loader": "4.4.1",
-    "tslint": "5.10.0",
-    "typescript": "2.9.2",
+    "@types/knockout": "3.4.59",
+    "css-loader": "1.0.0",
+    "file-loader": "2.0.0",
+    "node-sass": "4.9.4",
+    "sass-loader": "7.1.0",
+    "style-loader": "0.23.1",
+    "ts-loader": "5.2.2",
+    "tslint": "5.11.0",
+    "typescript": "3.1.3",
     "upath": "1.1.0",
-    "url-loader": "1.0.1",
-    "webpack": "4.12.2",
-    "webpack-cli": "^3.0.8"
+    "url-loader": "1.1.2",
+    "webpack": "4.21.0",
+    "webpack-cli": "3.1.2"
   },
   "scripts": {
     "build": "./node_modules/.bin/webpack --mode=development",
