--- a/src/FlatMate.Web/FlatMate.Web.csproj
+++ b/src/FlatMate.Web/FlatMate.Web.csproj
@@ -16,16 +16,16 @@
     <ItemGroup>
         <PackageReference Include="App.Metrics" Version="2.1.0"/>
         <PackageReference Include="App.Metrics.AspNetCore.Mvc" Version="2.0.0"/>
-        <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.3.0"/>
+        <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.3.1"/>
         <PackageReference Include="Microsoft.AspNetCore.App"/>
-        <PackageReference Include="prayzzz.Common.Mvc" Version="1.0.0-unstable-46.develop"/>
-        <PackageReference Include="Serilog" Version="2.7.1"/>
+        <PackageReference Include="prayzzz.Common.Mvc" Version="1.0.0.141-master"/>
+        <PackageReference Include="Serilog" Version="2.8.0"/>
         <PackageReference Include="Serilog.AspNetCore" Version="2.1.1"/>
         <PackageReference Include="Serilog.Settings.Configuration" Version="3.0.1"/>
         <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="6.5.0"/>
         <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0"/>
-        <PackageReference Include="Serilog.Sinks.Literate" Version="3.0.0"/>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="3.0.0"/>
+        <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1"/>
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\FlatMate.Migration\FlatMate.Migration.csproj"/>
