--- a/src/FlatMate.Web/FlatMate.Web.csproj
+++ b/src/FlatMate.Web/FlatMate.Web.csproj
@@ -4,6 +4,7 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
+        <RuntimeIdentifiers>win10-x64;linux-x64</RuntimeIdentifiers>
     </PropertyGroup>
 
     <ItemGroup>
@@ -12,15 +13,15 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="App.Metrics.AspNetCore.Mvc" Version="3.0.0" />
-        <PackageReference Include="App.Metrics.Formatters.InfluxDB" Version="3.0.0" />
-        <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.3.1" />
+        <PackageReference Include="App.Metrics.AspNetCore.Mvc" Version="3.1.0" />
+        <PackageReference Include="App.Metrics.Formatters.InfluxDB" Version="3.1.0" />
+        <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.4.0" />
         <PackageReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="prayzzz.Common.Mvc" Version="1.1.0.1" />
         <PackageReference Include="prayzzz.Common.Mvc.AppMetrics" Version="1.1.0.1" />
         <PackageReference Include="Serilog" Version="2.8.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="2.1.1" />
-        <PackageReference Include="Serilog.Settings.Configuration" Version="3.0.1" />
+        <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
         <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="7.1.0" />
         <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
         <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
