--- a/src/FlatMate.Web/wwwroot/package.json
+++ b/src/FlatMate.Web/wwwroot/package.json
@@ -5,33 +5,34 @@
   "repository": {},
   "license": "MIT",
   "dependencies": {
-    "array.prototype.find": "2.0.4",
-    "atomicjs": "3.2.1",
+    "array.prototype.find": "2.1.0",
+    "atomicjs": "4.4.0",
     "blazy": "1.8.2",
     "dateformat": "3.0.3",
-    "es6-promise": "4.2.6",
-    "glob": "7.1.3",
+    "es6-promise": "4.2.8",
+    "glob": "7.1.4",
     "knockout": "3.5.0",
-    "mini-css-extract-plugin": "0.5.0"
+    "mini-css-extract-plugin": "0.7.0"
   },
   "devDependencies": {
     "@types/blazy": "1.5.31",
     "@types/dateformat": "3.0.0",
     "css-loader": "1.0.0",
-    "file-loader": "3.0.1",
-    "node-sass": "4.11.0",
+    "file-loader": "4.0.0",
+    "node-sass": "4.12.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
-    "ts-loader": "5.3.3",
-    "tslint": "5.13.1",
-    "typescript": "3.3.3333",
-    "upath": "1.1.0",
-    "url-loader": "1.1.2",
-    "webpack": "4.29.6",
-    "webpack-cli": "3.2.3"
+    "ts-loader": "6.0.4",
+    "tslint": "5.18.0",
+    "typescript": "3.5.2",
+    "upath": "1.1.2",
+    "url-loader": "2.0.1",
+    "webpack": "4.35.0",
+    "webpack-cli": "3.3.5"
   },
   "scripts": {
     "build": "./node_modules/.bin/webpack --mode=development",
-    "watch": "./node_modules/.bin/webpack --mode=development --watch"
+    "watch": "./node_modules/.bin/webpack --mode=development --watch",
+    "up": "yarn upgrade-interactive --latest"
   }
 }
