--- a/src/FlatMate.Web/wwwroot/package.json
+++ b/src/FlatMate.Web/wwwroot/package.json
@@ -8,27 +8,29 @@
     "array.prototype.find": "2.1.0",
     "atomicjs": "4.4.0",
     "blazy": "1.8.2",
+    "cssnano": "^4.1.10",
     "dateformat": "3.0.3",
     "es6-promise": "4.2.8",
     "glob": "7.1.4",
     "knockout": "3.5.0",
-    "mini-css-extract-plugin": "0.7.0"
+    "mini-css-extract-plugin": "0.8.0",
+    "postcss-loader": "^3.0.0"
   },
   "devDependencies": {
     "@types/blazy": "1.5.31",
     "@types/dateformat": "3.0.0",
-    "css-loader": "1.0.0",
+    "css-loader": "3.0.0",
     "file-loader": "4.0.0",
     "node-sass": "4.12.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "ts-loader": "6.0.4",
     "tslint": "5.18.0",
-    "typescript": "3.5.2",
+    "typescript": "3.5.3",
     "upath": "1.1.2",
     "url-loader": "2.0.1",
-    "webpack": "4.35.0",
-    "webpack-cli": "3.3.5"
+    "webpack": "4.36.1",
+    "webpack-cli": "3.3.6"
   },
   "scripts": {
     "build": "./node_modules/.bin/webpack --mode=development",
