--- a/src/FlatMate.Web/FlatMate.Web.csproj
+++ b/src/FlatMate.Web/FlatMate.Web.csproj
@@ -1,10 +1,11 @@
-﻿<Project ToolsVersion="15.0" Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
     <Import Project="..\..\build\common.props" />
     <Import Project="..\..\build\web-build.props" />
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp2.2</TargetFramework>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
         <RuntimeIdentifiers>win-x64;linux-x64</RuntimeIdentifiers>
+        <LangVersion>7.3</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
@@ -13,19 +14,19 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="App.Metrics.AspNetCore.Mvc" Version="3.1.0" />
-        <PackageReference Include="App.Metrics.Formatters.InfluxDB" Version="3.1.0" />
-        <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.4.0" />
-        <PackageReference Include="Microsoft.AspNetCore.App" />
+        <PackageReference Include="App.Metrics.AspNetCore.Mvc" Version="4.0.0" />
+        <PackageReference Include="App.Metrics.Formatters.InfluxDB" Version="4.0.0" />
+        <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.5" />
         <PackageReference Include="prayzzz.Common.Mvc" Version="1.1.0.1" />
         <PackageReference Include="prayzzz.Common.Mvc.AppMetrics" Version="1.1.0.1" />
-        <PackageReference Include="Serilog" Version="2.8.0" />
-        <PackageReference Include="Serilog.AspNetCore" Version="2.1.1" />
+        <PackageReference Include="Serilog" Version="2.9.0" />
+        <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
         <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
-        <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="7.1.0" />
+        <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="8.1.0" />
         <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
         <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.4.1" />
     </ItemGroup>
 
     <ItemGroup>
