--- a/src/FlatMate.Web/wwwroot/package.json
+++ b/src/FlatMate.Web/wwwroot/package.json
@@ -5,32 +5,36 @@
   "repository": {},
   "license": "MIT",
   "dependencies": {
-    "array.prototype.find": "2.1.0",
-    "atomicjs": "4.4.0",
+    "array.prototype.find": "2.1.1",
+    "atomicjs": "4.4.1",
     "blazy": "1.8.2",
     "cssnano": "^4.1.10",
     "dateformat": "3.0.3",
     "es6-promise": "4.2.8",
-    "glob": "7.1.4",
-    "knockout": "3.5.0",
-    "mini-css-extract-plugin": "0.8.0",
+    "glob": "7.1.6",
+    "knockout": "3.5.1",
+    "mini-css-extract-plugin": "0.9.0",
     "postcss-loader": "^3.0.0"
   },
   "devDependencies": {
     "@types/blazy": "1.5.31",
-    "@types/dateformat": "3.0.0",
-    "css-loader": "3.0.0",
-    "file-loader": "4.0.0",
-    "node-sass": "4.12.0",
-    "sass-loader": "7.1.0",
-    "style-loader": "0.23.1",
-    "ts-loader": "6.0.4",
-    "tslint": "5.18.0",
-    "typescript": "3.5.3",
-    "upath": "1.1.2",
-    "url-loader": "2.0.1",
-    "webpack": "4.36.1",
-    "webpack-cli": "3.3.6"
+    "@types/dateformat": "3.0.1",
+    "css-loader": "3.6.0",
+    "file-loader": "6.0.0",
+    "node-gyp": "7.0.0",
+    "node-sass": "4.14.1",
+    "sass-loader": "8.0.2",
+    "style-loader": "1.2.1",
+    "ts-loader": "7.0.5",
+    "tslint": "6.1.2",
+    "typescript": "3.9.5",
+    "upath": "1.2.0",
+    "url-loader": "4.1.0",
+    "webpack": "4.43.0",
+    "webpack-cli": "3.3.11"
+  },
+  "resolutions": {
+    "node-gyp": "7.0.0"
   },
   "scripts": {
     "build": "./node_modules/.bin/webpack --mode=development",
